# simple_rasterizer

./: CMakeLists.txt  README.md
src/: rasterizer.cc  rasterizer.h
test/: test.cc
